.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__RepositoryCredentials__c.object
<CustomObject>
    <description>Used to hold credentials about external repository</description>
    <fields>
        <fullName>Flosum__CompileXml__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CompileXml</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Directory__c</fullName>
        <label>Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__ExtRepositoryId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalRepositoryId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Host__c</fullName>
        <label>Host</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__KnownHostsId__c</fullName>
        <label>KnownHostsId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__LastTimeSync__c</fullName>
        <label>LastTimeSync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Passphrase__c</fullName>
        <label>Passphrase</label>
        <length>80</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Flosum__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Flosum__Path__c</fullName>
        <description>Relative path of repository</description>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__PrivateKeyId__c</fullName>
        <label>PrivateKeyId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Project_Format__c</fullName>
        <label>Project Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__PublicKeyId__c</fullName>
        <label>PublicKeyId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__RepositoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipLabel>Repository Settings</relationshipLabel>
        <relationshipName>Repository_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__SyncOnlyChanges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Only Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Uri__c</fullName>
        <label>Uri</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__isLinked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Equals true, if org is backed by this repository</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__knownHosts__c</fullName>
        <label>knownHosts</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__privateKey__c</fullName>
        <label>privateKey</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__protocol__c</fullName>
        <description>Available protocols</description>
        <label>Protocol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTTPS</fullName>
                    <default>true</default>
                    <label>HTTPS</label>
                </value>
                <value>
                    <fullName>SSH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__publicKey__c</fullName>
        <label>publicKey</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>Repository Settings</label>
    <nameField>
        <label>RepositoryCredentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repository Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>